iterator exceptions tripping due to new checking in VS2010.
B [master 2cc9f3e] Fixed a long standing bug in AllTests, the automated test runner,
whereby it choked if the test apps outputted more data than fitted into pipe's buffer.
A handy side effect is that running the automated test suite is now VERY considerably
faster!
B [master xxxxxxx] Stunningly enough, QPipe - the oldest code in TnFOX not touched since
2002 - somehow STILL had a bug in it. Due to Windows pipes being badly implemented,
you can't wait on them to signal like everything else in Windows or POSIX so you have
to run them via async i/o. This means leaving a null byte read running most of time so
the event object is correctly anchored to there being data available. Somehow or other
I managed to delete the crucial line which fires this null byte async read during my
last surgery on QPipe, so occasionally QIODeviceS::waitForData() was returning when
there was no data, thus causing a hang during QPipe::readBlock(). 

* (1089) Bumped TnFOX to v0.89
* (1089) Updated to use OpenSSL v1.0
* (1089) Updated to use scons v1.2 (Python v2.6)
* (1089) Extended MSVC build system to enable use of SSE3 and SSE4 intrinsics.
* (1090) Replaced Maths::VectorArray with Maths::Array and Maths::Matrix. Also
fixed some silly SSE3 and SSE4 compilation errors :( Disabled global memory
allocator replacement on Mac OS X as the 10.5 system allocator is faster in
every way. Added aligned memory allocation plus aligned_allocator<> STL allocator.
+ (1091) Added VIEWER_NICEST and VIEWER_LEFTZOOMS options to FXGLViewer.
+ (1092) Moved all the OpenGL FOX code into the graphing module. Added FXGLCircle.
+ (1093) Added FOX FXVecXX and FXMatXX interoperability to Maths::Vector and
Maths::Matrix. SSE but non-SSE3 sum() now runs much faster, and Maths::Matrix<float,4>
multiply is several times faster than FOX's FXMat4f.
* (1094-1117) Much work invested into nedmalloc which can now patch itself in to
replace the system allocator.